# JacLib

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.glsl
.github/workflows/: tests_linux.yaml  tests_windows.yaml
inc/jac/: debug.hpp  print.hpp  types.hpp
inc/jac/graphics/: common.hpp  indexbuffer.hpp  shader.hpp  vertexbuffer.hpp  window.hpp
inc/jac/graphics/apis/opengl/: indexbuffer.hpp  init.hpp  shader.hpp  vertexbuffer.hpp
inc/jac/impl/: api.hpp  compiler.hpp  print_args.hpp
inc/jac/impl/graphics/: shader.hpp
src/: print.cpp
src/graphics/: common.cpp  shader.cpp  window.cpp
src/graphics/apis/opengl/: indexbuffer.cpp  shader.cpp  vertexbuffer.cpp
tst/: CMakeLists.txt  Print.cpp  Types.cpp
tst/fixtures/: GraphicsF.hpp
tst/graphics/: Window.cpp
